include/DynamsoftBarcodeReader.h

	// Creates an instance of Dynamsoft Barcode Reader. 
	// @return Return an instance of Dynamsoft Barcode Reader. If failed, return NULL.
	DBR_API void*  DBR_CreateInstance();
	// Destroys an instance of Dynamsoft Barcode Reader. 
	// @param [in] hBarcode Handle of the barcode reader instance.
	DBR_API void DBR_DestroyInstance(void*  hBarcode);